--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^3.2.3"
 Pillow = "^8.2.0"
 django-sass = "^1.0.1"
 python-dotenv = "^0.17.1"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 
