--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Pillow = "^8.2.0"
 django-sass = "^1.0.1"
 python-dotenv = "^0.17.1"
 psycopg2-binary = "^2.8.6"
+Markdown = "^3.3.4"
 
 [tool.poetry.dev-dependencies]
 
