--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-sass = "^1.0.1"
 python-dotenv = "^0.17.1"
 psycopg2-binary = "^2.8.6"
 Markdown = "^3.3.4"
+wagtail = "^2.14.2"
 
 [tool.poetry.dev-dependencies]
 
