--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ authors = ["jnutterdev <hello@jnutterdev.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.3"
-django-sass = "^1.1.0"
 python-dotenv = "^0.17.1"
 psycopg2-binary = "^2.8.6"
 Markdown = "^3.3.4"
 wagtail = "^2.14.2"
 django-webp = "^2.0.0"
 Pillow = "^8.4.0"
+django-tailwind = "^2.2.2"
 
 [tool.poetry.dev-dependencies]
 
